fix: 상위 15개의 채팅내역을 조회하는 로직에서 리턴 객체 QnaResponse로 변경